added random quotes and random image, uses ejs to generate

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,5 +5,6 @@
         <li><a href="stacks">Stacks &amp; Queues</a></li>
         <li><a href="trees">Trees &amp; Graphs</a></li>
         <li><a href="hash-tables">Hash Tables</a></li>
+        <li><a href="inspirational-quote">Inspirational Quote</a></li>
     </ul>
 </nav>
